--- a/EcoNote/EcoNote.csproj
+++ b/EcoNote/EcoNote.csproj
@@ -165,7 +165,9 @@
   <ItemGroup>
     <None Include="App.config" />
   </ItemGroup>
-  <ItemGroup />
+  <ItemGroup>
+    <Resource Include="이미지\교환취소.png" />
+  </ItemGroup>
   <ItemGroup>
     <Resource Include="이미지\회원가입.png" />
   </ItemGroup>
@@ -223,6 +225,9 @@
   </ItemGroup>
   <ItemGroup>
     <Resource Include="이미지\상품권\비타500.jpg" />
+  </ItemGroup>
+  <ItemGroup>
+    <Resource Include="이미지\바코드.png" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
