--- a/EcoNote/EcoNote.csproj
+++ b/EcoNote/EcoNote.csproj
@@ -70,11 +70,11 @@
     <Compile Include="ViewModel\JoinVM.cs" />
     <Compile Include="ViewModel\LoginVM.cs" />
     <Compile Include="ViewModel\NoteVM.cs" />
-    <Compile Include="View\Donation.xaml.cs">
-      <DependentUpon>Donation.xaml</DependentUpon>
+    <Compile Include="View\Dona.xaml.cs">
+      <DependentUpon>Dona.xaml</DependentUpon>
     </Compile>
-    <Compile Include="View\Exchange.xaml.cs">
-      <DependentUpon>Exchange.xaml</DependentUpon>
+    <Compile Include="View\Exch.xaml.cs">
+      <DependentUpon>Exch.xaml</DependentUpon>
     </Compile>
     <Compile Include="View\Home.xaml.cs">
       <DependentUpon>Home.xaml</DependentUpon>
@@ -106,11 +106,11 @@
       <DependentUpon>MainWindow.xaml</DependentUpon>
       <SubType>Code</SubType>
     </Compile>
-    <Page Include="View\Donation.xaml">
+    <Page Include="View\Dona.xaml">
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
     </Page>
-    <Page Include="View\Exchange.xaml">
+    <Page Include="View\Exch.xaml">
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
     </Page>
